tests/paczka1/fuzzy1/35948665.err
Error in line 8: I8zk0Jov85 A274 17,1
Error in line 18: cRK0BoD S765 72,9
Error in line 22: csErdA S411 3`,6
Error in line 20: cRK0BoD S841 13,5
Error in line 17: I8zk0Jov85 S765 78,9
